##
## Process this file with automake to produce Makefile.in
##

EXTRA_DIST = logo.xpm logo.xpm.txt logo_henon_measure.xpm logo_henon_measure.xpm.txt logo_sigma_delta.xpm logo_sigma_delta.xpm.txt logo_logistic.xpm logo_logistic.xpm.txt logo_pwLinearCont2D.xpm logo_pwLinearCont2D.xpm.txt logo_henon_basins.xpm logo_henon_basins.xpm.txt logo_tinkerbell.xpm logo_tinkerbell.xpm.txt
datadir = $(prefix)/share/AnT/gui/logos
data_DATA = $(EXTRA_DIST)

## make AnT-core really clean
maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
