##
## Process this file with automake to produce Makefile.in
##

noinst_HEADERS = regex.h
noinst_LTLIBRARIES = libregex.la
libregex_la_SOURCES = regex.c


## make AnT-core really clean
maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in
