##
## Process this file with automake to produce Makefile.in
##

EXTRA_DIST = glui_img_checkbox_0.c glui_img_checkbox_0_dis.c \
	glui_img_checkbox_1.c glui_img_checkbox_1_dis.c \
	glui_img_downarrow.c glui_img_leftarrow.c \
	glui_img_listbox_down.c glui_img_listbox_up.c \
	glui_img_listbox_up_dis.c glui_img_radiobutton_0.c \
	glui_img_radiobutton_0_dis.c glui_img_radiobutton_1.c \
	glui_img_radiobutton_1_dis.c glui_img_rightarrow.c \
	glui_img_spindown_0.c glui_img_spindown_1.c \
	glui_img_spindown_dis.c glui_img_spinup_0.c \
	glui_img_spinup_1.c glui_img_spinup_dis.c \
	glui_img_uparrow.c


## make AnT-core really clean
maintainer-clean-generic:
	-@echo "This command is intended for maintainers to use;"
	-@echo "it deletes files that may require special tools to rebuild."
	-rm -f Makefile.in






